tests/paczka1/fuzzy1/95284980.err
Error in line 29: AvN S856 3/2,3
Error in line 30: 7l8dLus S258 83,8
Error in line 38: HRkAzOHBtr S961 44,9
Error in line 36: 7l8dLus S724 54,1
